# Numens-Loop-Calculator

./: .contextignore  .gitignore  AGENTS.md  AI_WORKFLOW_GUIDE.md  Current Consumption.xlsx  LoopCalculatorApp.py  README.md  app_settings.json  build-desktop.bat  build-installer.bat  check_xlsx.py  convert_xlsx.py  convert_xlsx_proper.py  convert_xlsx_robust.py  devices_new.json  dupes.csv  loop_calculator_backend.spec  magic-context.jsonc  opencode.jsonc  products_db.defaults.json  products_db.json  requirements.txt  run_backend.py  启动程序.bat  数据库合并去重机制.md
.opencode/: context-priority.md  oh-my-opencode-slim.jsonc
.opencode/commands/: save-session.md  start-task.md
.trellis/: .template-hashes.json
.trellis/tasks/: TEMPLATE.md
.trellis/workspace/: JOURNAL_TEMPLATE.md  journal.jsonl
archive/desktop_gui_2026-05-06/: AGENTS.md  Loop Calculator.html  README.md  RESTORE_DESKTOP_GUI.md  (+1 more)
docs/: desktop-update-flow.md  windows-desktop-update.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs  updater.rs
loop_calculator/: __main__.py  app_settings.py  calculator.py  constants.py  core_widgets.py  device_list_delegates.py  device_list_model.py  i18n.py  loop_editor.py  loop_editor_support.py  main_window.py  row_select_filter.py  styles.py
tests/: GUI_SMOKE_CHECKLIST.md  test_calculator.py  test_database.py  test_device_state_model.py  test_gui_smoke.py  test_integration_flow.py
(+119 files in other folders)
